--- a/src/main/python/templates/home.html
+++ b/src/main/python/templates/home.html
@@ -24,4 +24,11 @@
 
   <div class="x-d3"></div>
 
+  <div class="x-controls">
+    <button class="x-reset">Reset</button>
+    <button class="x-create">Create</button>
+  </div>
+
+  <div class="x-status"></div>
+
 {% endblock %}
