Neo connection working and start of Data API.

--- a/src/main/python/templates/home.html
+++ b/src/main/python/templates/home.html
@@ -17,7 +17,11 @@
     <table>
     <tr>
       <td>NEO</td>
-      <td>{{ config.neo }}</td>
+      <td>{{ config.neo_url }}</td>
+    </tr>
+    <tr>
+      <td>Database</td>
+      <td>{{ db }}</td>
     </tr>
     </table>
   </div>
@@ -26,6 +30,7 @@
 
   <div class="x-controls">
     <button class="x-reset">Reset</button>
+    <button class="x-load">Load</button>
     <button class="x-create">Create</button>
   </div>
 
