Query nodes + relationships working.

--- a/src/main/python/templates/home.html
+++ b/src/main/python/templates/home.html
@@ -17,7 +17,7 @@
     <table>
     <tr>
       <td>NEO</td>
-      <td>{{ config.neo_url }}</td>
+      <td><a href="{{ config.neo_url }}">{{ config.neo_url }}</a></td>
     </tr>
     <tr>
       <td>Database</td>
