--- a/src/main/python/templates/home.html
+++ b/src/main/python/templates/home.html
@@ -17,7 +17,7 @@
     <table>
     <tr>
       <td>NEO</td>
-      <td><a href="{{ config.neo_url }}">{{ config.neo_url }}</a></td>
+      <td><a href="http://{{ config.neo_url }}" target="neo">{{ config.neo_url }}</a></td>
     </tr>
     <tr>
       <td>Database</td>
@@ -32,6 +32,7 @@
     <button class="x-reset">Reset</button>
     <button class="x-load">Load</button>
     <button class="x-create">Create</button>
+    <button class="x-refresh">Refresh</button>
   </div>
 
   <div class="x-status"></div>
