--- a/src/main/python/templates/demo.html
+++ b/src/main/python/templates/demo.html
@@ -16,8 +16,8 @@
     http://flask-triangle.readthedocs.org/en/develop/tutorial/part1.html
     -->
   {% raw %}
-  <div id="app" xmlns:ng="http://angularjs.org">
-    <div ng-view></div>
+  <div id="app" ng-strict-di>
+    <section ui-view></section>
   </div>
   {% endraw %}
 
