--- a/src/main/webapp/resources/js/view/test/view.html
+++ b/src/main/webapp/resources/js/view/test/view.html
@@ -1,7 +1,7 @@
-<div xmlns:ng="http://angularjs.org">
+<div>
 
   <h1>Hello {{ text }}</h1>
 
-  <input type="text" ng:model="text"/>
+  <input type="text" ng-model="text"/>
 
 </div>
