--- a/src/main/webapp/resources/js/view/home/view.html
+++ b/src/main/webapp/resources/js/view/home/view.html
@@ -12,6 +12,7 @@
     <div ng-controller="MenuController">
       <button ng-click="clear()">Clear</button>
       <button ng-click="load()">Load</button>
+      <button ng-click="add()">Add</button>
     </div>
   </div>
 
