--- a/src/main/webapp/resources/js/view/home/view.html
+++ b/src/main/webapp/resources/js/view/home/view.html
@@ -13,6 +13,8 @@
       <button ng-click="clear()">Clear</button>
       <button ng-click="load()">Load</button>
       <button ng-click="add()">Add</button>
+      <button ng-click="start()">Start</button>
+      <button ng-click="stop()">Stop</button>
     </div>
   </div>
 
