--- a/src/main/python/templates/demo.html
+++ b/src/main/python/templates/demo.html
@@ -6,6 +6,8 @@
 
   <script type="text/javascript" src="/res/lib/requirejs/require.js" data-main="/res/js/app/demo/config"></script>
 
+  {% include 'config.html' %}
+
 {% endblock %}
 
 {% block body %}
