--- a/src/main/webapp/resources/js/view/home/view.html
+++ b/src/main/webapp/resources/js/view/home/view.html
@@ -1,11 +1,11 @@
 <div>
 
   <div class="app-info">
-    <ui-table data="AppInfo"></ui-table>
+    <ui-table bind="AppInfo"></ui-table>
   </div>
 
   <div class="app-graph">
-    <ui-graph model="GraphModel"></ui-graph>
+    <ui-graph bind="GraphModel"></ui-graph>
   </div>
 
   <div class="app-menu">
