--- a/src/main/python/templates/config.html
+++ b/src/main/python/templates/config.html
@@ -1,8 +1,4 @@
-<script type="application/javascript">
-window.__APP_CONFIG__ = {
-  app: {
-    id:       'Demo',
-    version:  '0.0.1'
-  }
-};
-</script>
+
+  <script type="application/javascript">
+    window['__APP_CONFIG__'] = {{ config|tojson|safe }};
+  </script>
