--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -34,7 +34,29 @@ h1, h2, h3 {
 }
 
 /*
- *
+ * Layout
+ */
+
+.app-container {
+  background-color: #EEE;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.app-center {
+  background-color: white;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  padding: 10px;
+}
+
+/*
+ * Components
  */
 
 .app-error:after {
