--- a/src/main/python/templates/home.html
+++ b/src/main/python/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
-    <title>{{ config.title }}</title>
+    <title>{{ config.client.app.name }}</title>
     <meta http-equiv="refresh" content="0;URL=/demo">
 {% endblock %}
 
