--- a/src/main/python/templates/options.html
+++ b/src/main/python/templates/options.html
@@ -1,9 +1,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
-
-  <title xmlns="http://www.w3.org/1999/html">{{ config.title }}</title>
-
+  <title>{{ config.client.app.name }}</title>
 {% endblock %}
 
 {% block body %}
