--- a/src/main/webapp/resources/js/view/home/view.html
+++ b/src/main/webapp/resources/js/view/home/view.html
@@ -15,7 +15,7 @@
       <button ng-click="add()">Add</button>
       <button ng-click="start()">Start</button>
       <button ng-click="stop()">Stop</button>
-      <button ng-click="ping()">Ping</button>
+      <button ng-click="notify()">Notify</button>
     </div>
   </div>
 
