--- a/src/main/python/templates/layout.html
+++ b/src/main/python/templates/layout.html
@@ -7,9 +7,10 @@
     <link rel="icon" href="/favicon.ico">
     <link href="/res/css/main.css" rel="stylesheet">
 
+    <title>{{ config.app.name }}</title>
+
     {% block head %}
     {% endblock %}
-
 
   </head>
   <body>
