--- a/src/main/webapp/resources/js/view/home/view.html
+++ b/src/main/webapp/resources/js/view/home/view.html
@@ -1,26 +1,5 @@
 <div>
 
-  <div class="app-info">
-    <ui-table bind="AppInfo"></ui-table>
-  </div>
-
-  <div class="app-graph">
-    <ui-graph bind="GraphModel"></ui-graph>
-  </div>
-
-  <div class="app-menu">
-    <div ng-controller="MenuController">
-      <button ng-click="clear()">Clear</button>
-      <button ng-click="load()">Load</button>
-      <button ng-click="add()">Add</button>
-      <button ng-click="start()">Start</button>
-      <button ng-click="stop()">Stop</button>
-      <button ng-click="notify()">Notify</button>
-    </div>
-  </div>
-
-  <div class="app-status">
-    <div ng-controller="StatusController">{{ message }}</div>
-  </div>
+  <h1>Home</h1>
 
 </div>
