--- a/src/main/python/templates/home.html
+++ b/src/main/python/templates/home.html
@@ -1,9 +1,20 @@
 {% extends "layout.html" %}
 
 {% block head %}
-    <meta http-equiv="refresh" content="0;URL=/demo">
 {% endblock %}
 
 {% block body %}
-
+  <h1>Home</h1>
+  <div>
+    {% if user %}
+    <div>User: {{ user }}</div>
+    <div>
+      <a href="/logout">Logout</a>
+    </div>
+    {% else %}
+    <div>
+      <a href="/login">Login</a>
+    </div>
+    {% endif %}
+  </div>
 {% endblock %}
