--- a/src/main/python/templates/home.html
+++ b/src/main/python/templates/home.html
@@ -9,6 +9,7 @@
     {% if user %}
     <div>User: {{ user.name }}</div>
     <div>
+      <a href="/demo">Demo</a>
       <a href="/logout/twitter">Logout</a>
     </div>
     {% else %}
